# dish

./: .gitignore  Cargo.toml  core_config.toml  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci_pipeline.yml
crates/api/src/: local_auth.rs  (+1 more)
deployment/: 10GB_RAM_MANIFEST.md  Dockerfile.python  Dockerfile.rust  docker-compose.yml  launch_master.sh  teardown_master.sh  wslconfig_optimizer.ini
deployment/scripts/: chaos_monkey.py  integration_test_suite.sh  performance_benchmark.py
deployment/security/: env_encryptor.py  firewall_rules.sh  mkcert_setup.sh
deployment/windows/: process_isolator.py  system_tuner.bat  win_firewall_rules.ps1
docs/: ARCHITECTURE_AND_USER_GUIDE.md
frontend/: package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: launch_browser.bat  manifest.json
python/accounting/: hifo_optimizer.py  tax_loss_harvester.py
python/alpha/: capital_allocator.py  decay_monitor.py  factor_combiner.py
python/alt_data/: fear_greed_index.py  geopolitical_tracker.py  google_trends.py
python/analytics/: data_normalizer.py  macro_sentiment.py  onchain_scraper.py
python/api/: system_controls.py
python/arb/: matrix_visualizer.py
python/backtest/: fill_engine.py  node_runner.py  venue_simulator.py
python/benchmark/: drawdown_analyzer.py  index_tracker.py  sharpe_sortino_calculator.py
python/boot/: warmup_pipeline.py
python/cache/: parquet_ui_reader.py
python/cli/: config_validator.py
python/crosschain/: bridge_monitor.py  gas_predictor.py
python/data/: distributed_aggregator.py  duckdb_manager.py  out_of_core_duckdb.py  ray_data_sharder.py  redis_cache.py
python/database/: telemetry_writer.py
python/defi/: dex_router.py  tvl_oracle.py
python/deployment/: rollback_manager.py  shadow_mode.py
python/distributed/: ray_autoscaler.py  resource_quotas.py
python/execution/: crypto_signer.py  instrument_universe.py  sniper_logic.py
python/fallback/: cloud_offloader.py  network_monitor.py
python/frontend_bridge/: state_snapshotter.py
python/fundamentals/: staking_metrics.py  token_unlocks.py
python/glue/: asyncio_runner.py  logger.py  system_monitor.py
python/hardware/: amd_tuner.py  ram_enforcer.py
python/hedging/: deep_hedging_model.py  friction_aware_loss.py
python/imitation/: expert_trajectory_extractor.py  gail_trainer.py
python/journal/: parquet_archiver.py  tagging_engine.py
python/macro/: correlation_engine.py  fred_api_client.py
python/marl/: mappo_trainer.py  pettingzoo_env.py  reward_sharing.py
python/memory/: ram_enforcer_win.py
python/monitoring/: concept_drift_monitor.py  data_drift_monitor.py  live_performance_tracker.py
python/montecarlo/: bootstrapper.py  ruin_probability.py
python/nautilus/: buffer_shrinker.py  depth_publisher.py  engine.py  l3_adapter.py  node_config.py  venue_config.py
python/onchain/: exchange_flows.py  whale_tracker.py
python/optimization/: heatmap_generator.py  objective_functions.py  ptq_quantizer.py  rocm_memory_profiler.py  search_space.py  walk_forward.py  walk_forward_visualizer.py
python/orchestrator/: python_supervisor.py
python/pipeline/: feature_store_updater.py  model_validator.py  retrain_orchestrator.py
python/portfolio/: bayesian_updater.py  cross_margin_hedger.py  hrp_clusterer.py  risk_parity.py  scenario_analyzer.py  stress_tester.py  telemetry_aggregator.py
python/power/: acpi_listener.py  cpu_governor.py
python/profiling/: latency_histogram.py  perf_events.py
python/ray/: cluster_bootstrap.py  feature_pipeline.py  feature_selection.py  historical_hydrator.py  online_learning_buffer.py  plasma_memory_tuner.py
python/reconciliation/: phantom_order_sweeper.py
python/recovery/: manual_override_handoff.py
python/registry/: strategy_catalog.py  version_control.py
python/reporting/: audit_trail_generator.py  metrics_calculator.py  tax_exporter.py  tca_analyzer.py  visualizer.py
python/resilience/: venue_failover.py
python/risk/: factor_exposure_tracker.py  risk_attribution.py
python/rl_execution/: ppo_executor.py  state_space_encoder.py
python/sandbox/: what_if_engine.py
scripts/: env_validator.py  native_windows_launcher.bat  run_bot.sh  setup_environment.sh  windows_hft_tuner.ps1
(+328 files in other folders)
