[project]
name = "crypto-trading-bot"
version = "0.1.0"
description = "Ultra-low-latency institutional-grade crypto trading bot"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core async and event loop
    "uvloop>=0.19.0",
    "orjson>=3.10.0",
    
    # Trading framework
    "nautilus_trader>=1.180.0",
    
    # Distributed computing (memory-optimized)
    "ray>=2.10.0",
    
    # Data processing (compiled, low-memory)
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "numpy>=1.26.0",
    
    # Database
    "duckdb>=0.10.0",
    "redis>=5.0.0",
    
    # System monitoring
    "psutil>=5.9.0",
    
    # Hardware detection
    "py-cpuinfo>=9.0.0",
    "gpustat>=1.1.0",
    
    # Logging
    "structlog>=24.1.0",
    
    # Type hints
    "typing_extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

# ROCm/AMD GPU support (optional, for ML inference)
amd-gpu = [
    "torch>=2.2.0",
    "rocm-bindings>=5.7.0",
]

[tool.uv]
# Pre-compile binary wheels for faster startup
compile-bytecode = true
# Use system Python packages where available
system-site-packages = false
# Offline mode after initial install
offline = false

[tool.uv.pip]
# Prefer pre-built binaries to reduce build-time memory
prefer-binary = true
# Disable build isolation for lower memory usage during install
no-build-isolation = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
